--- a/functions/package.json
+++ b/functions/package.json
@@ -24,10 +24,13 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
+    "jest": "^29.7.0",
     "jest-runner-groups": "^2.2.0",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0",
-    "uuid": "^9.0.1"
+    "supertest": "^6.3.3",
+    "uuid": "^9.0.1",
+    "uuid-validate": "^0.0.3"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0",
