--- a/functions/package.json
+++ b/functions/package.json
@@ -20,6 +20,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase-admin": "^11.8.0",
