--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "scripts": {
     "test": "jest  --group=-component --group=-integration"
+  },
+  "dependencies": {
+    "cors": "^2.8.5"
   }
 }
