--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "jest  --group=-component --group=-integration"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
