--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "devDependencies": {
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-runner-groups": "^2.2.0",
     "supertest": "^6.3.3",
     "uuid-validate": "^0.0.3"
   },
   "scripts": {
-    "test": "jest  --group=-component --group=-integration"
+    "test": "jest  --group=-component --group=-integration",
+    "prepare": "husky install",
+    "test:watch": "jest --watchAll=true --passWithNoTests --group=-component --group=-integration",
+    "test:unit": "jest --group=unit",
+    "test:component": "jest --group=component",
+    "test:integration": "jest --group=integration",
+    "component_test": "jest --group=component",
+    "integration_test": "jest --group=integration"
   },
   "dependencies": {
     "cors": "^2.8.5"
