--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,8 +1,21 @@
 name: hello-world
 on: push
 jobs:
-  any-job:
+  test:
+    name: Run unit-tests
     runs-on: ubuntu-latest
     steps:
-      - name: any-step
-        run: echo "Hello World!"
+      steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Run Unit Tests
+        run: npm run test unit_test
