lint errors fixed

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,8 @@
         "react"
     ],
     "rules": {
+        "semi": [2, "always"],
+        "quotes": "off",
+        "no-undef": "off"
     }
 }
