--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -19,3 +19,6 @@ jobs:
 
     - name: Run Unit Tests
       run: npm run test unit_test
+    
+    - name: Run Integration Tests
+      run: npm run integration_test
