--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -2,7 +2,7 @@ name: Run tests
 on: push
 jobs:
   test:
-    name: Run unit-tests
+    name: Run tests
     runs-on: ubuntu-latest
     
     steps:
