--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -20,5 +20,5 @@ jobs:
     - name: Run Unit Tests
       run: npm run test unit_test
     
-    - name: Run Integration Tests
-      run: npm run integration_test
+    - name: Run Component Tests
+      run: npm run component_test
