--- a/.github/workflows/firebase_hosting.yml
+++ b/.github/workflows/firebase_hosting.yml
@@ -1,45 +1,36 @@
 name: Firebase CI
 on: push
 jobs:
-  build:
-
+  test:
+    name: Run tests
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [15.x]
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js version ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
     
-    - run: npm i
-    - run: npm install -g firebase-tools
-    - run: npm run test unit_test
-    - run: npm run build
-    - name: Archive Build
-      uses: actions/upload-artifact@v2
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
       with:
-        name: build
-        path: build
+        node-version: '16'
+
+    - name: Install Dependencies
+      run: npm install
+
+    - name: Run Unit Tests
+      run: npm run test unit_test
+    
+    - name: Run Component Tests
+      run: npm run test component_test
 
   deploy:
     name: Deploy
-    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Download Build
-        uses: actions/download-artifact@v2
-        with:
-          name: build
-          path: build
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
-          args: deploy --only hosting
+          args: deploy
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
