--- a/.github/workflows/firebase_hosting.yml
+++ b/.github/workflows/firebase_hosting.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Install Dependencies
         run: npm install
